added patch handler - /subscriptions/{subscriptions_id}
